--- a/src/app2/src/index.html
+++ b/src/app2/src/index.html
@@ -7,9 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 <body>
   <app2-root></app2-root>
+  <menu-app2></menu-app2>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.8.19/zone.js"></script>
+  <script src="./menu.js"></script>
 </body>
 </html>
